[tool.poetry]
name = "valhalla-proto"
version = "3.6.3.dev20260324"
description = "Generated Python code for the Valhalla protobuf API"
authors = [
    "Christian Beiwinkel <chrstn@bwnkl.de>",
]
packages = [
    { include = "valhalla_proto", from = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
betterproto2 = "^0.9.0"

[tool.poetry.group.dev.dependencies]
tomli_w = "*"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
