[project]
name = "valhalla-proto"
version = "3.6.3.dev20260326"
description = "Generated Python code for the Valhalla protobuf API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Christian Beiwinkel ", email = "chrstn@bwnkl.de" },
]
dependencies = [
  "betterproto2>=0.9,<0.10",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
